finished main functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,9 @@
 export("%>%")
 export(simulate_genetic_disease_from_topic)
 export(simulate_topics)
+export(wrapper_ATM)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(magrittr,"%>%")
