--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,14 @@ LazyData: true
 Imports: 
     dplyr,
     ggplot2,
+    ggrepel,
+    grDevices,
+    gtools,
     magrittr,
-    reshape2
+    reshape2,
+    stats,
+    tidyr,
+    utils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
