pass devtool::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,12 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme_bw)
 importFrom(grDevices,colorRampPalette)
 importFrom(magrittr,"%>%")
 importFrom(stats,binomial)
