finish function predict_OR for prediction odds ratio

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(icd2phecode)
 export(loading2weights)
 export(plot_age_topics)
+export(prediction_OR)
 export(simulate_genetic_disease_from_topic)
 export(simulate_topics)
 export(wrapper_ATM)
