--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: ATM
-Title: Inferring age-dependent disease topic from diagnosis data
-Version: 0.0.0.9000
+Package: AgeTopicModels
+Title: Inferring Age-Dependent Disease Topic from Diagnosis Data
+Version: 0.1.0
 Authors@R: 
     person("Xilin", "Jiang", , "xilinjiang@hsph.harvard.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6773-9182"))
