cleaning the LFA parts for CRAN submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            comment = c(ORCID = "0000-0001-6773-9182"))
 Description: We propose an age-dependent topic modelling (ATM) model,
     providing a low-rank representation of longitudinal records of
-    hundreds of distinct diseases in large EHR data sets. The model
+    hundreds of distinct diseases in large electronic health record data sets. The model
     assigns to each individual topic weights for several disease topics;
     each disease topic reflects a set of diseases that tend to co-occur as
     a function of age, quantified by age-dependent topic loadings for each
@@ -15,7 +15,7 @@ Description: We propose an age-dependent topic modelling (ATM) model,
     topics, for a given individual), and a disease is sampled based on the
     individual’s age and the age-dependent topic loadings (which sum to 1
     across diseases, for a given topic at a given age). The model
-    generalises the latent dirichlet allocation (LDA) model by allowing
+    generalises the Latent Dirichlet Allocation (LDA) model by allowing
     topic loadings for each topic to vary with age.
 License: MIT + file LICENSE
 Depends: 
@@ -28,6 +28,7 @@ Imports:
     gtools,
     magrittr,
     pROC,
+    reshape2,
     rlang,
     stats,
     stringr,
