--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(icd2phecode)
 export(loading2weights)
 export(longdata2diseasematrix)
 export(plot_age_topics)
+export(plot_lfa_topics)
 export(prediction_OR)
 export(simulate_genetic_disease_from_topic)
 export(simulate_topics)
 export(wrapper_ATM)
+export(wrapper_LFA)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
